cabal-version: 2.0
name:          rotatePlugin
category:      Language
version:       0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      a
description:   b

library rotate
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends: base
  hs-source-dirs: rotate/rotate/src
  signatures: Rotate
  exposed-modules: TestRotate

library rotateBackpack
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends: base,linear,vect
  hs-source-dirs: rotate/rotateBackpack/internal
  exposed-modules: LinearRotate,VectRotate

executable rotate-example
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends: base, rotate, rotateBackpack
  hs-source-dirs: rotate/rotateUse/example
  main-is: Main.hs
  mixins: rotate (TestRotate as Linear.TestRotate) requires (Rotate as LinearRotate)
  mixins: rotate (TestRotate as Vect.TestRotate  ) requires (Rotate as VectRotate  )



